--- a/ParkingManagement/config/App.config
+++ b/ParkingManagement/config/App.config
@@ -19,8 +19,6 @@
 
 	<!-- Connect MySQL -->
 	<connectionStrings>
-		<add name="MySqlConnection"
-			 connectionString="Server=localhost;Port=3306;Database=dumpdbparking;Uid=root;Pwd=duchai;"
-			 providerName="MySql.Data.MySqlClient" />
+		<add name="MySqlConnection" connectionString="server=maglev.proxy.rlwy.net;port=34844;database=railway;uid=root;pwd=urHOIrqETuUpWtRYdePhLkckzkKtlbHE;SslMode=none;" providerName="MySql.Data.MySqlClient" />
 	</connectionStrings>
 </configuration>
