update-combobox-baixe

--- a/ParkingManagement/config/App.config
+++ b/ParkingManagement/config/App.config
@@ -18,7 +18,10 @@
 	</runtime>
 
 	<!-- Connect MySQL -->
-	<connectionStrings>
-		<add name="MySqlConnection" connectionString="server=maglev.proxy.rlwy.net;port=34844;database=railway;uid=root;pwd=urHOIrqETuUpWtRYdePhLkckzkKtlbHE;SslMode=none;" providerName="MySql.Data.MySqlClient" />
-	</connectionStrings>
+
+  <connectionStrings>
+    <add name="MySqlConnection"
+         connectionString="server=localhost;port=3306;database=railway;uid=root;pwd=123456;SslMode=none;"
+         providerName="MySql.Data.MySqlClient" />
+  </connectionStrings>
 </configuration>
