--- a/ParkingManagement/config/App.config
+++ b/ParkingManagement/config/App.config
@@ -20,7 +20,8 @@
 	<!-- Connect MySQL -->
   <connectionStrings>
     <add name="MySqlConnection"
-         connectionString="server=localhost;port=3306;database=railway;uid=root;pwd=123456;SslMode=none;"
+         connectionString="server=localhost;port=3306;database=railway;uid=root;pwd=123456;SslMode=none;AllowPublicKeyRetrieval=True;"
          providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
+
 </configuration>
