--- a/ParkingManagement/config/App.config
+++ b/ParkingManagement/config/App.config
@@ -19,9 +19,9 @@
 
 	<!-- Connect MySQL -->
   <connectionStrings>
-    <add name="MySqlConnection"
-         connectionString="server=localhost;port=3306;database=railway;uid=root;pwd=123456;SslMode=none;AllowPublicKeyRetrieval=True;"
-         providerName="MySql.Data.MySqlClient" />
+	  <add name="MySqlConnection"
+		   connectionString="Server=localhost;Port=3306;Database=dumpdbparking;Uid=root;Pwd=duchai;"
+		   providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
 
 </configuration>
